<resources>
    <string name="app_name">Countries</string>
    <string name="message_loading">loading...</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="title_activity_country_detail">CountryDetailActivity</string>

    <string name="action_settings">Settings</string>

    <string name="nativeName_lb">Native Name</string>
    <string name="capital_lb">Capital</string>
    <string name="alphaCode_lb">Alpha Code</string>
    <string name="callingCode_lb">Calling Code</string>
    <string name="region_sub_lb">Region and SubRegion</string>
    <string name="population_lb">Population</string>
    <string name="altspellings_lb">Alt Spellings</string>
    <string name="area_detail_lb">Area Detail</string>
    <string name="latlong_lb">Latitude and Longitude</string>
    <string name="borders_lb">Borders</string>
    <string name="currencies_lb">Currencies Detail</string>
    <string name="language_lb">Languages Detail</string>
    <string name="regionalblocs_lb">Regional Blocs</string>
    <string name="country_name_translations">Country Name translations</string>
    <string name="data_save_sussessfully">Country Details save sussessfully</string>
    <string name="search_country">Search Country By Name</string>
    <string name="no_data_found">No Country found</string>
    <string name="external_memory_less_space">External memory has less space</string>
</resources>
